@@ -1,5 +1,13 @@
 2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/samples/test_swapdepths(fla, swf): swapDepths() tester
+	* gameswf/samples/test_duplicateclip(fla, swf): duplicateMovieClip() tester
+	* gameswf/gameswf_impl(cpp, h),
+	* gameswf/gameswf_dlist(cpp, h): added swapDepths & duplicateMovieClip stuff,
+	duplicateMovieClip has a bug, later will be fixed
+
+2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/samples/test_delete(fla, swf): added delete tester
 	* gameswf/gameswf_classes/as_array(cpp,h): added to_string()
 	for trace() & updated length property
